--- a/src/Themes/KrakeAdmin/App_Data/Localization/it-IT/orchard.theme.po
+++ b/src/Themes/KrakeAdmin/App_Data/Localization/it-IT/orchard.theme.po
@@ -68,6 +68,50 @@ msgctxt "~/Themes/KrakeAdmin/Views/Content.SummaryAdmin.cshtml"
 msgid "More info"
 msgstr "Mostra più informazioni"
 
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Archive"
+msgstr "Archivia"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Delete"
+msgstr "Elimina"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Edit"
+msgstr "Modifica"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Not Published"
+msgstr "Non pubblicato"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Offline"
+msgstr "Offline"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Online"
+msgstr "Online"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Published"
+msgstr "Pubblicato"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "The page is currently offline"
+msgstr "La pagina è attualmente offline"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "The page is currently online"
+msgstr "La pagina è attualmente online"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "Unarchive"
+msgstr "Disarchivia"
+
+msgctxt "~/Themes/KrakeAdmin/Views/Content-Order.SummaryAdmin.cshtml"
+msgid "View order"
+msgstr "Visualizza ordine"
+
 msgctxt "~/Themes/KrakeAdmin/Views/Contents/admin/ivreaterritorio_cpf_manifestazione_ruolo.cshtml"
 msgid "Add"
 msgstr "Aggiungi"
